Add contested roll helper

--- a/lang/en.json
+++ b/lang/en.json
@@ -15,5 +15,37 @@
   "WNG.Common.And": "and",
   "WNG.SlowedConditions.ChatReminder": "{name} is slowed by {conditions}.",
   "WNG.SlowedConditions.UnknownName": "this combatant",
-  "WNGCE.Condition.Engaged": "Engaged"
+  "WNGCE.Condition.Engaged": "Engaged",
+  "WNGCE.Common.UnknownActor": "an unknown combatant",
+  "WNGCE.ContestedRoll.DialogTitle": "Contested Test",
+  "WNGCE.ContestedRoll.Roll": "Roll",
+  "WNGCE.ContestedRoll.Attacker": "Acting Character",
+  "WNGCE.ContestedRoll.AttackerTrait": "Acting Trait",
+  "WNGCE.ContestedRoll.AttackerBonusDice": "Bonus Dice (Acting)",
+  "WNGCE.ContestedRoll.AttackerWrath": "Wrath Dice (Acting)",
+  "WNGCE.ContestedRoll.AttackerDn": "DN (Acting)",
+  "WNGCE.ContestedRoll.Defender": "Opposing Character",
+  "WNGCE.ContestedRoll.DefenderTrait": "Opposing Trait",
+  "WNGCE.ContestedRoll.DefenderBonusDice": "Bonus Dice (Opposing)",
+  "WNGCE.ContestedRoll.DefenderWrath": "Wrath Dice (Opposing)",
+  "WNGCE.ContestedRoll.DefenderDn": "DN (Opposing)",
+  "WNGCE.ContestedRoll.DialogHint": "Pick two actors and their relevant traits. Adjust DN or bonus dice if situational modifiers apply.",
+  "WNGCE.ContestedRoll.TargetHint": "Currently targeted", 
+  "WNGCE.ContestedRoll.ControlledHint": "Currently controlled",
+  "WNGCE.ContestedRoll.CombatantHint": "In the current combat",
+  "WNGCE.ContestedRoll.UnknownTrait": "Unknown Trait",
+  "WNGCE.ContestedRoll.WrongSystem": "Contested tests are only available in Wrath & Glory worlds.",
+  "WNGCE.ContestedRoll.NoActors": "No eligible actors were found to test against.",
+  "WNGCE.ContestedRoll.NoTraits": "No skills or attributes are available to roll.",
+  "WNGCE.ContestedRoll.InvalidSelection": "Choose two actors and valid traits before rolling.",
+  "WNGCE.ContestedRoll.RollFailure": "The contested roll could not be completed. Check the console for details.",
+  "WNGCE.ContestedRoll.TagWrathCrit": "Wrath Critical",
+  "WNGCE.ContestedRoll.TagWrathComplication": "Complication",
+  "WNGCE.ContestedRoll.TagShifts": "{count} potential shifts",
+  "WNGCE.ContestedRoll.TotalDice": "Dice: {count}",
+  "WNGCE.ContestedRoll.WrathDice": "Wrath: {count}",
+  "WNGCE.ContestedRoll.Successes": "Icons: {count} vs DN {dn}",
+  "WNGCE.ContestedRoll.WinnerLine": "{name} wins the test by {margin} icons!",
+  "WNGCE.ContestedRoll.TieLine": "The test is tied – no clear winner.",
+  "WNGCE.ContestedRoll.ButtonLabel": "Contested Roll"
 }
